[project]
name = "pentoolkit"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "typer",
    "rich",
    "pydantic",
    "jinja2",
    "pyyaml"
]

[project.scripts]
pentoolkit = "pentoolkit.cli:main"


[tool.setuptools.packages.find]
include = ["pentoolkit*"]
exclude = ["results*", "config.yaml"]
